# nem

./: .gitignore  CLAUDE.md  LICENSE  README.md  potts_30x30_3.nei  potts_30x30_3.str
csrc/: err2.c  exememo.c  geo2nei.c  nem_alg.c  nem_exe.c  nem_hlp.c  nem_mod.c  nem_rnd.h  txt2hlp.c
examples/: essai.nei  example_potts_30x30.py  example_sbm_100.py  example_sbm_200.py  generate.py  potts_20x25_3.nei  potts_20x25_3.str  potts_20x25_3.true.cf  potts_30x30_3.nei  potts_30x30_3.str  potts_30x30_3.true.cf  sbm_100_2.nei  sbm_100_2.str  sbm_100_3.nei  sbm_100_3.str  sbm_100_3.true.cf  sbm_200_3.nei  sbm_200_3.str  sbm_200_3.true.cf
pynem/: pyproject.toml
pynem/src/pynem/: __init__.py  core.py  io.py  metrics.py  models.py  spatial.py  viz.py
pynem/tests/: test_nem.py
